// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display/Icon Badge smoke-test 1`] = `
<span data-cy="adornment">
  <span data-cy="adornment-badge"
        class="MuiBadge-root css-mui-classname"
  >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="AccountCircleIcon"
         data-cy="icon"
    >
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
      </path>
    </svg>
    <span class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-mui-classname">
      5
    </span>
  </span>
</span>
`;

exports[`Display/Icon ForwardedProps smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium test-forward css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="AccountCircleIcon"
     data-cy="icon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
  </path>
</svg>
`;

exports[`Display/Icon IconCustom smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="StyleIcon"
     data-cy="icon"
     style="height: 24px; width: 24px;"
>
  <path d="m2.53 19.65 1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61m19.5-3.7L17.07 3.98c-.31-.75-1.04-1.21-1.81-1.23-.26 0-.53.04-.79.15L7.1 5.95c-.75.31-1.21 1.03-1.23 1.8-.01.27.04.54.15.8l4.96 11.97c.31.76 1.05 1.22 1.83 1.23.26 0 .52-.05.77-.15l7.36-3.05c1.02-.42 1.51-1.59 1.09-2.6M7.88 8.75c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1m-2 11c0 1.1.9 2 2 2h1.45l-3.45-8.34z">
  </path>
</svg>
`;

exports[`Display/Icon Loading smoke-test 1`] = `
<span class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-mui-classname"
      style="width: 24px; height: 24px;"
>
</span>
`;

exports[`Display/Icon Primary smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="AccountCircleIcon"
     data-cy="icon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
  </path>
</svg>
`;

exports[`Display/Icon Rotate smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="AccountCircleIcon"
     data-cy="icon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
  </path>
</svg>
`;

exports[`Display/Icon SizeLarge smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="AccountCircleIcon"
     data-cy="icon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
  </path>
</svg>
`;

exports[`Display/Icon SizeSmall smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="AccountCircleIcon"
     data-cy="icon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
  </path>
</svg>
`;

exports[`Display/Icon SkipRender smoke-test 1`] = `""`;

exports[`Display/Icon Styled smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="AccountCircleIcon"
     data-cy="icon"
     style="background-color: red; border-radius: 4px; color: white; padding: 4px;"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
  </path>
</svg>
`;

exports[`Display/Icon Tooltip smoke-test 1`] = `
<span data-cy="adornment">
  <span aria-label="account"
        data-cy="adornment-tooltip"
        class
  >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="AccountCircleIcon"
         data-cy="icon"
    >
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
      </path>
    </svg>
  </span>
</span>
`;
